--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -6,7 +6,9 @@ awscli==1.29.75
 boto3==1.28.75
 Django==4.2.7
 django-crontab==0.7.1
+django-phonenumber-field
 gunicorn==20.1.0
+phonenumbers
 psycopg2-binary==2.9.9
 python-dotenv==0.21.1
 sqlparse==0.4.4
